--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="/assets/css/style.css">
 
 </head>
+<style>
+    body {
+        background-color: red;
+    }
+    </style>
 <body>
     <header>
         <h1>Today I Learned</h1>
@@ -14,16 +19,9 @@
     </header>
     <main>
         <p>This is a website where I share daily learnings.</p>
-        <h3>Recent Posts</h3>
-        <ul>
-            <li><a href="/posts/test.html">Test Page</a></li>
-   
-            <!-- Add more posts as needed -->
-        </ul> 
+
 
     </main>
-    <footer>
-        <p>Updated daily with new learnings</p>
-    </footer>
+
 </body>
 </html>
